--- a/Application/Application/Application.vcxproj
+++ b/Application/Application/Application.vcxproj
@@ -151,10 +151,12 @@
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="myArray.cpp" />
+    <ClCompile Include="myHeap.cpp" />
     <ClCompile Include="myList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="myArray.h" />
+    <ClInclude Include="myHeap.h" />
     <ClInclude Include="myList.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
