--- a/Application/Application/Application.vcxproj
+++ b/Application/Application/Application.vcxproj
@@ -151,11 +151,13 @@
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="myArray.cpp" />
+    <ClCompile Include="myFile.cpp" />
     <ClCompile Include="myHeap.cpp" />
     <ClCompile Include="myList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="myArray.h" />
+    <ClInclude Include="myFile.h" />
     <ClInclude Include="myHeap.h" />
     <ClInclude Include="myList.h" />
   </ItemGroup>
